[patch.crates-io]
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-client-db = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-informant = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-application-crypto = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-externalities = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-storage = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-state-machine = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-trie = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'master' }

pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'master' }

# ORML dependencies
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }

[package]
authors = ['GalacticCouncil']
build = 'build.rs'
description = 'Hack Hydra DX'
edition = '2018'
homepage = 'https://github.com/galacticcouncil/hack.hydradx-node'
license = 'Unlicense'
name = 'hack-hydra-dx'
repository = 'https://github.com/galacticcouncil/hack.hydradx-node'
version = '2.0.0'

[[bin]]
name = 'hack-hydra-dx'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
serde_json = "1.0.44"

# local dependencies
primitives = { path = '../../primitives', version = '2.0.0' }
module-amm-rpc = { path = '../../pallets/amm/rpc', version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = '2.0.0'
frame-benchmarking-cli = '2.0.0'
pallet-transaction-payment-rpc = '2.0.0'
sc-basic-authorship = '0.8.0'
sc-cli = { features = ['wasmtime'], version = '0.8.0' }
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-consensus-aura = '0.8.0'
sc-executor = { features = ['wasmtime'], version = '0.8.0' }
sc-finality-grandpa = '0.8.0'
sc-rpc = '2.0.0'
sc-rpc-api = '0.8.0'
sc-service = { features = ['wasmtime'], version = '0.8.0' }
sc-keystore = '2.0.0'
sc-transaction-pool = '2.0.0'
sp-api = '2.0.0'
sp-block-builder = '2.0.0'
sp-blockchain = '2.0.0'
sp-consensus = '0.8.0'
sp-consensus-aura = '0.8.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'
substrate-frame-rpc-system = '2.0.0'

hack-hydra-dx-runtime = {path = "../../runtime"}
