[package]
name = "pallet-adder-felipe"
version = "1.0.0"
description = "Simple adder pallet for demonstration"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/hydration-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/hydration-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Optionals
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]