[package]
authors = ['GalacticCouncil']
description = 'HydraDX AMM Module'
edition = '2018'
homepage = 'https://github.com/galacticcouncil/hydra-dx'
license = 'Unlicense'
name = 'pallet-amm'
repository = 'https://github.com/galacticcouncil/hydra-dx'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.orml-traits]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library.git'
package = 'orml-traits'
rev = '5a0e46b45d1a0f1aaebec82a693f96663b1cd07b'
version = '0.1.3-dev'

[dependencies.asset-registry]
default-features = false
package = 'pallet-asset-registry'
path = '../asset-registry'

[dependencies.primitives]
default-features = false
package = 'primitives'
path = '../../primitives'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.orml-tokens] # Note: this should be only dev depedeny but Exchange cannot compile in that case
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library.git'
package = 'orml-tokens'
rev = '5a0e46b45d1a0f1aaebec82a693f96663b1cd07b'
version = '0.1.3-dev'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
optional = true
default-features = false
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-system-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
optional = true
default-features = false
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[features]
default = ['std']
std = [
  'asset-registry/std',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'orml-tokens/std',
  'orml-traits/std',
  'primitives/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
    "frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]