[package]
authors = ['GalacticCouncil']
description = 'HydraDX AMM Module'
edition = '2018'
homepage = 'https://github.com/galacticcouncil/hack.hydradx-node'
license = 'Unlicense'
name = 'pallet-amm'
repository = 'https://github.com/galacticcouncil/hack.hydradx-node'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = {package = 'substrate-wasm-builder-runner', version = '1.0.5'}

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
primitive-types = {default-features = false, version = '0.7.2'}
serde = {features = ['derive'], optional = true, version = '1.0.101'}

hack-hydra-dx-math = { default-features = false, version = "0.1.0", git = "https://github.com/galacticcouncil/hack.hydraDX-math", branch="main"}

# Local dependencies
pallet-asset-registry = {path = '../asset-registry', default-features = false, version = '2.0.0'}
primitives = {path = '../../primitives', default-features = false, version = '2.0.0'}

# ORML dependencies
orml-tokens = {default-features = false, version = "0.3.3-dev"}
orml-traits = {default-features = false, version = "0.3.3-dev"}
orml-utilities = {default-features = false, version = "0.3.2"}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '2.0.0'}
frame-support = {default-features = false, version = '2.0.0'}
frame-system = {default-features = false, version = '2.0.0'}
frame-system-benchmarking = {default-features = false, optional = true, version = '2.0.0'}
sp-std = {default-features = false, version = '2.0.0'}
sp-core = {default-features = false, version = '2.0.0'}
sp-runtime = {default-features = false, version = '2.0.0'}

[dev-dependencies]
sp-io = {default-features = false, version = '2.0.0'}

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'orml-tokens/std',
  'orml-traits/std',
  'primitives/std',
]
