[package]
authors = ['GalacticCouncil']
description = 'HydraDX AMM Module'
edition = '2018'
homepage = 'https://github.com/galacticcouncil/hydradx-node'
license = 'Unlicense'
name = 'pallet-amm'
repository = 'https://github.com/galacticcouncil/hydradx-node'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = {package = 'substrate-wasm-builder-runner', version = '1.0.5'}

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
primitive-types = {default-features = false, version = '0.8.0'}
serde = {features = ['derive'], optional = true, version = '1.0.101'}

hydra-dx-math = {default-features = false, version = "1.0.0", git = "https://github.com/galacticcouncil/hydraDX-math", tag="v1.0.0"}

# Local dependencies
pallet-asset-registry = {path = '../asset-registry', default-features = false}
primitives = {path = '../../primitives', default-features = false}

# ORML dependencies
orml-tokens = {default-features = false, version = "0.4.1-dev"}
orml-traits = {default-features = false, version = "0.4.1-dev"}
orml-utilities = {default-features = false, version = "0.4.1-dev"}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
frame-system-benchmarking = {default-features = false, optional = true, version = '3.0.0'}
sp-core = {default-features = false, version = '3.0.0'}
sp-runtime = {default-features = false, version = '3.0.0'}
sp-std = {default-features = false, version = '3.0.0'}

[dev-dependencies]
sp-io = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'orml-tokens/std',
  'orml-traits/std',
  'primitives/std',
]
