[package]
name = "pallet-asset-registry"
version = "3.2.4"
description = "Pallet for asset registry management"
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true, optional = true }
log = { workspace = true }

# ORML dependencies
orml-traits = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# HydraDX dependencies
hydradx-traits = { workspace = true }

# Optionals
frame-benchmarking = { workspace = true, optional = true }
sp-api = { workspace = true, optional = true }

[dev-dependencies]
orml-tokens = { workspace = true }
sp-io = { workspace = true }
polkadot-xcm = { workspace = true }
test-utils = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "serde/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "hydradx-traits/std",
  "sp-api/std",
  "frame-benchmarking/std",
  "scale-info/std",
  "polkadot-xcm/std",
  "orml-tokens/std",
]
try-runtime = ["frame-support/try-runtime"]

