[package]
name = "pallet-bonds"
version = "2.0.1"
authors = ['GalacticCouncil']
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/galacticcouncil/hydradx-node'
repository = 'https://github.com/galacticcouncil/hydradx-node'
description = "HydraDX Bonds pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# parity
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.4.0" }

# HydraDX
hydradx-traits = { workspace = true }
primitives = { workspace = true }

# primitives
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

# FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }

# ORML
orml-traits = { workspace = true }

# third party
primitive-types = { workspace = true }
log = { version = "0.4.17", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-tracing = { workspace = true }
frame-benchmarking = { workspace = true }
orml-tokens = { workspace = true }
pretty_assertions = "1.2.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"orml-tokens/std",
	"pallet-timestamp/std",
	"hydradx-traits/std",
	"primitives/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-io",
	"pallet-timestamp/runtime-benchmarks"
]
try-runtime = [ "frame-support/try-runtime" ]
